--- a/css/style_serv.css
+++ b/css/style_serv.css
@@ -95,6 +95,18 @@ body {
   .active-button {
     background-color: #333333 !important;
   }
+  #map {
+  width: 100%;
+  height: 400px;
+  min-height: 400px;
+  border: 1px solid #ccc;
+}
+
+.map-container {
+  width: 100%;
+  height: 400px;
+  flex: 1;
+}
 
   .map {
     width: 55%;
